--- a/ffmpeg/src/main/res/values/colors.xml
+++ b/ffmpeg/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="color_381902">#222222</color>
     <color name="transparent2">#50000000</color>
-
+    <color name="transparent">#00000000</color>
     <color name="color_4e3d31">#4e3d31</color>
     <color name="grey8">#888888</color>
     <color name="transparent_black_85">#DA000000</color>
